syntax = "proto3";

package chat.v1;

import "rbt/v1alpha1/options.proto";

////////////////////////////////////////////////////////////////////////

service MessageMethods {
  rpc Edit(EditRequest) returns (EditResponse) {
    option (rbt.v1alpha1.method) = {
      writer: {},
    };
  }

  rpc Get(GetRequest) returns (GetResponse) {
    option (rbt.v1alpha1.method) = {
      reader: {},
    };
  }
}

////////////////////////////////////////////////////////////////////////

message Message {
  option (rbt.v1alpha1.state) = {
  };

  // User that authored this message.
  string author = 1;

  // Text of the message.
  string text = 2;
}

////////////////////////////////////////////////////////////////////////

// Representation of message details that we share publicly.
message Details {
  string id = 4;
  string author = 1;
  string text = 2;
}

////////////////////////////////////////////////////////////////////////

message EditRequest {
  string author = 1;
  string text = 2;
}

message EditResponse {}

////////////////////////////////////////////////////////////////////////

message GetRequest {}

message GetResponse {
  Details details = 1;
}

////////////////////////////////////////////////////////////////////////
